--- a/Views/Account/login.cshtml
+++ b/Views/Account/login.cshtml
@@ -1,9 +1,25 @@
 @{
-	ViewData["Title"] = "ログインフォー";
+	ViewData["Title"] = "ログインフォーム";
 }
 
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<h2>ログイン</h2>
+<hr />
+<div class="row">
+    <div class="col-md-6">
+        <form asp-controller="Account" asp-action="Login" method="post">
+            <div asp-validation-summary="All" class="text-danger"></div>
+            <div class="form-group">
+                <label for="employeeId">社員ID</label>
+                <input type="text" name="employeeId" placeholder="社員ID" id="employeeId" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label for="password">パスワード</label>
+                <input type="password" name="password" placeholder="パスワード" id="password" class="form-control" />
+            </div>
+            <div class="form-group">
+                <input type="submit" value="ログイン" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
 </div>
