--- a/Views/Account/login.cshtml
+++ b/Views/Account/login.cshtml
@@ -4,11 +4,19 @@
 
 
 <h2>ログイン</h2>
+
+@if (ViewBag.Error != null)
+{
+<div class="alert alert-danger" role="alert">
+    @ViewBag.Error
+</div>  
+}
+
 <hr />
 <div class="row">
     <div class="col-md-6">
         <form asp-controller="Account" asp-action="Login" method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
+            @* <div asp-validation-summary="All" class="text-danger"></div> *@
             <div class="form-group">
                 <label for="employeeId">社員ID</label>
                 <input type="text" name="employeeId" placeholder="社員ID" id="employeeId" class="form-control" />
