ログインセッションの追加、詳細ボタン追加

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -55,7 +55,7 @@
                     <td>@employee.CreatedAt?.ToString("yyyy年MM月dd日")</td>
                     <td>
                         <div class="mb-4">
-                            <a asp-action="Index" class="btn btn-secondary">戻る</a>
+                            <a asp-action="Detail" asp-route-id="@employee.Id" class="btn btn-secondary">詳細</a>
                             <a asp-action="Edit" asp-route-id="@employee.Id" class="btn btn-warning">編集</a>
                             <form method="post" asp-action="Delete" asp-route-id="@employee.Id" style="display:inline;">
                                 <button type="submit" class="btn btn-danger" onclick="return confirm('本当に削除しますか？')">
