新規登録機能の追加

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -57,6 +57,7 @@
                         <div class="mb-4">
                             <a asp-action="Detail" asp-route-id="@employee.Id" class="btn btn-secondary">詳細</a>
                             <a asp-action="Edit" asp-route-id="@employee.Id" class="btn btn-warning">編集</a>
+                            <a asp-action="Create" class="btn btn-warning">新規登録</a>
                             <form method="post" asp-action="Delete" asp-route-id="@employee.Id" style="display:inline;">
                                 <button type="submit" class="btn btn-danger" onclick="return confirm('本当に削除しますか？')">
                                     削除
