--- a/Views/Home/Edit.cshtml
+++ b/Views/Home/Edit.cshtml
@@ -51,7 +51,7 @@
 
 <div class="card mb-4">
     <div class="card-header">
-        <h4>所属部署・課（テスト）</h4>
+        <h4>所属部署・課</h4>
     </div>
     <div class="card-body">
         @{
