--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,6 +7,7 @@
 
 <div class="text-center">
     <h1 class="display-4">社員一覧</h1>
+    <a asp-action="Create" class="btn btn-primary btn-lg m-4">新規登録</a>
     <table class="table">
         <thead>
             <tr>
@@ -57,8 +58,7 @@
                     <td>
                         <div class="mb-4">
                             <a asp-action="Detail" asp-route-id="@employee.Id" class="btn btn-secondary">詳細</a>
-                            <a asp-action="Edit" asp-route-id="@employee.Id" class="btn btn-warning">編集</a>
-                            <a asp-action="Create" class="btn btn-warning">新規登録</a>
+                            <a asp-action="Edit" asp-route-id="@employee.Id" class="btn btn-warning m-1">編集</a>
                             @if (User.FindFirst(ClaimTypes.NameIdentifier).Value != employee.Id.ToString())
                             {
                                 <form method="post" asp-action="Delete" asp-route-id="@employee.Id" style="display:inline;">
