--- a/Views/Account/login.cshtml
+++ b/Views/Account/login.cshtml
@@ -13,7 +13,7 @@
 }
 
 <hr />
-<div class="row">
+<div class="row d-flex justify-content-center">
     <div class="col-md-6">
         <form asp-controller="Account" asp-action="Login" method="post">
             <div class="form-group">
@@ -24,7 +24,7 @@
                 <label for="password">パスワード</label>
                 <input type="password" name="password" placeholder="パスワード" id="password" class="form-control" />
             </div>
-            <div class="form-group">
+            <div class="form-group mt-3 text-center">
                 <input type="submit" value="ログイン" class="btn btn-primary" />
             </div>
         </form>
