--- a/Views/Home/Edit.cshtml
+++ b/Views/Home/Edit.cshtml
@@ -78,7 +78,7 @@
                 <div class="ms-3">
                     @foreach (var dept in company.Departments)
                     {
-                        <div class="mb-4">
+                        <div class="mb-3">
                             <div class="form-check mb-2">
                                 <input class="form-check-input" 
                                     type="checkbox" 
@@ -91,10 +91,10 @@
                                 </label>
                             </div>
                             
-                            <div class="row ms-3">
+                            <div class="ms-3 d-flex flex-wrap">
                                 @foreach (var division in dept.Divisions)
                                 {
-                                    <div class="col-md-4 mb-2">
+                                    <div class="me-3 mb-2">
                                         <div class="form-check">
                                             <input class="form-check-input" 
                                                 type="checkbox" 
