バリデーション強化

--- a/Views/Home/Create.cshtml
+++ b/Views/Home/Create.cshtml
@@ -25,8 +25,7 @@
                     <input type="text" 
                            class="form-control" 
                            id="employeeName" 
-                           name="employeeName" 
-                           required />
+                           name="employeeName" />
                 </div>
                 <div class="mb-3">
                     <label for="newPassword" class="form-label">パスワード</label>
